Add caching data

--- a/app/src/main/res/xml/fragment_home_scene.xml
+++ b/app/src/main/res/xml/fragment_home_scene.xml
@@ -69,7 +69,7 @@
 
             <CustomAttribute
                 motion:attributeName="backgroundColor"
-                motion:customColorValue="@color/white"/>
+                motion:customColorValue="@color/white_dark"/>
 
             <CustomAttribute
                 motion:attributeName="elevation"
