--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,9 +21,11 @@
             android:id="@+id/toolbar_city_choice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingStart="5dp"
             android:foreground="?android:attr/selectableItemBackground"
             android:clickable="true"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            tools:ignore="RtlSymmetry">
 
             <TextView
                 android:id="@+id/toolbar_current_city"
@@ -38,7 +40,8 @@
                 android:layout_gravity="bottom"
                 android:layout_marginStart="5dp"
                 android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
-                android:scaleType="fitXY"/>
+                android:scaleType="fitXY"
+                tools:ignore="ContentDescription" />
 
 
         </androidx.appcompat.widget.LinearLayoutCompat>
@@ -53,7 +56,8 @@
             android:layout_marginEnd="10dp"
             android:layout_gravity="end"
             android:src="@drawable/ic_baseline_qr_code_scanner_24"
-            android:scaleType="fitXY"/>
+            android:scaleType="fitXY"
+            tools:ignore="ContentDescription" />
 
 
     </androidx.appcompat.widget.Toolbar>
@@ -67,12 +71,28 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/main_tab_layout"/>
 
+    <TextView
+        android:id="@+id/main_notification"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="8dp"
+        android:background="@color/red"
+        android:textColor="@color/white_dark"
+        android:text="@string/error_notification"
+        android:padding="10dp"
+        android:textSize="18sp"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/main_tab_layout"/>
+
+
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/main_tab_layout"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_gravity="bottom"
-        android:elevation="4dp"
+        android:elevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
