--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -35,12 +35,15 @@
         android:paddingVertical="@dimen/default_vertical_margin"
         android:paddingHorizontal="@dimen/default_horizontal_margin"
         app:singleLine="true"
-        tools:ignore="RtlSymmetry">
+        app:singleSelection="true"
+        app:selectionRequired="true"
+        tools:ignore="RtlSymmetry,ScrollViewSize">
 
         <com.google.android.material.chip.Chip
             android:id="@+id/home_chip_pizza"
             style="@style/home_chip_style"
             android:text="@string/product_category_pizza"
+            android:checked="true"
             tools:ignore="TextContrastCheck,TextContrastCheck" />
 
         <com.google.android.material.chip.Chip
