--- a/app/src/main/res/layout/item_banner_list.xml
+++ b/app/src/main/res/layout/item_banner_list.xml
@@ -3,7 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:foreground="?android:attr/selectableItemBackground"
-    android:layout_marginStart="@dimen/default_horizontal_margin"
+    android:layout_marginHorizontal="10dp"
     android:clickable="true"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     
