--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,10 +6,13 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white_dark">#FFFFFF</color>
 
-    <color name="gray_light">#F7F7F7</color>
+    <color name="gray_light">#F1F1F1</color>
     <color name="gray">#B6B6B6</color>
     <color name="rose">#FD3A69</color>
     <color name="rose_light">#28FD3A69</color>
+    <color name="red">#FF0000</color>
+
+
 </resources>
