--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.TestPizza" parent="Theme.Material3.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimary">@color/white_dark</item>
         <item name="colorOnPrimary">@color/black</item>
 
         <item name="colorSecondary">@color/rose_light</item>
@@ -19,15 +19,15 @@
         <item name="cornerSize">10%</item>
     </style>
 
-    <style name="home_chip_style">
+    <style name="home_chip_style" parent="Widget.MaterialComponents.Chip.Choice">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="chipStartPadding">10dp</item>
         <item name="chipEndPadding">10dp</item>
-        <item name="chipBackgroundColor">@color/rose_light</item>
+        <item name="chipBackgroundColor">@color/chip_background_colors</item>
         <item name="chipStrokeWidth">0dp</item>
-        <item name="android:textSize">15dp</item>
-        <item name="android:textColor">@color/rose</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/chip_text_colors</item>
         <item name="android:enabled">false</item>
     </style>
 </resources>
